updateReplicaSetOnConfigServer should not skip config server

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 7.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • None
    • Fully Compatible
    • ALL
    • Sharding NYC 2023-04-17
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When a shard's configuration changes, each mongos will detect this and then update the corresponding config.shards document in the config server. Currently, this logic skips the update if the replica set that changed was the config server, but now the config server can be a shard, so we should not skip this step.

            Assignee:
            Jack Mulrow
            Reporter:
            Jack Mulrow
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: