SERVER-75849 updateReplicaSetOnConfigServer should not skip config server